--- a/web-app/css/charityChamp.css
+++ b/web-app/css/charityChamp.css
@@ -164,6 +164,46 @@ color: #006600;
 }
 
 
+#adminNav {
+	width: 100%;
+	height: 28px;
+	background-color: #fafaf6;
+	margin-top: 10px;
+	margin-bottom: 20px;
+	padding-top: 14px;
+	-webkit-box-shadow: 0px 1px 2px #ccc;
+	-moz-box-shadow: 0px 1px 2px #ccc;
+	box-shadow: 0px 1px 2px #ccc;
+	font: bold 10px "DroidSansBold", Verdana,sans-serif;
+	font-weight: bold;
+	text-transform: uppercase;
+	letter-spacing: 1px;
+}
+
+#adminNav ul li {
+	display: inline;
+	padding-left: 43px;
+}
+
+#adminNav li a {
+	padding: 5px 15px;
+	color: #64645d;
+	text-shadow: 1px 1px 1px #fff;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	border-radius: 5px;
+	-webkit-transition: all .3s ease-in-out;
+	-moz-transition: all .3s ease-in-out;
+	-o-transition: all .3s ease-in-out;
+	transition: all .3s ease-in-out;
+}
+
+#adminNav li a:hover {
+	color: #009900;
+	background: #efefe9;
+}
+
+
 
 
 h1 {
@@ -220,25 +260,5 @@ h1 {
 
 #info ul li:last-child {
 	border-right: none;
-}
-
-.copyright {
-	background: url(../images/bottle.png) left no-repeat;
-	opacity: .15;
-	padding: 20px 0 0 35px;
-	height: 67px;
-	font: normal 10px "DroidSansRegular", Verdana, sans-serif;
-	line-height: 16px;
-	margin-top: 15px;
-	color: #000000;
-	-webkit-transition: opacity .3s ease-in-out;
-	-moz-transition: opacity .3s ease-in-out;
-	-o-transition: opacity .3s ease-in-out;
-	transition: opacity .3s ease-in-out;
-}
-
-
-.copyright:hover {
-	opacity: .7;
 }
 
