--- a/web-app/css/charityChamp.css
+++ b/web-app/css/charityChamp.css
@@ -145,6 +145,7 @@ color: #006600;
 	margin-top: 10px;
 	margin-bottom: 20px;
 	padding-top: 14px;
+	padding-bottom: 5px;
 	-webkit-box-shadow: 0px 1px 2px #ccc;
 	-moz-box-shadow: 0px 1px 2px #ccc;
 	box-shadow: 0px 1px 2px #ccc;
@@ -156,11 +157,11 @@ color: #006600;
 
 #primaryNav ul li {
 	display: inline;
-	padding-left: 43px;
+	padding-left: 0%;
 }
 
 #primaryNav li a {
-	padding: 5px 15px;
+	padding: 4px 15px;
 	color: #64645d;
 	text-shadow: 1px 1px 1px #fff;
 	-webkit-border-radius: 5px;
@@ -171,6 +172,7 @@ color: #006600;
 	-o-transition: all .3s ease-in-out;
 	transition: all .3s ease-in-out;
 	 text-decoration: none;
+	
 }
 
 #primaryNav li a:hover {
